Align form and dataset APIs and denormalize scope fk. (#12)
The following has been done:
-link forms and datasets to a scope even when they are related to an event (denormalizing the property)
-align APIs in form and dataset services
-mutualize code used to create forms and datasets
-remove unused methods
-add related tests in form and dataset services
-add missing Javadoc